--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "sass": "^1.52.3",
@@ -32,6 +33,7 @@
     "acorn-jsx": "^5.3.2",
     "babel-loader": "^8.2.4",
     "json": "^11.0.0",
+    "typed-scss-modules": "^6.5.0",
     "typescript": "^4.6.3",
     "vite": "^2.8.6",
     "vite-plugin-dts": "^1.0.3"
